# snklogsys

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
src/snklogsys/: formatters.py  handlers.py  levels.py  loggers.py  logpaths.py
