[project]
name = "snklogsys"
version = "0.0.4"
description = "Pythonの標準モジュールのみの簡易的なlogツール"
readme = "README.md"
authors = [
    { name = "Takanashi", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
